// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<DomainStatusIcon /> > renders expected icon and tooltip when status is not validating 1`] = `
<svg
  aria-hidden="true"
  class="svg-inline--fa fa-circle-notch fa-spin fa-fw "
  data-icon="circle-notch"
  data-prefix="fas"
  focusable="false"
  role="img"
  viewBox="0 0 512 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M222.7 32.1c5 16.9-4.6 34.8-21.5 39.8C121.8 95.6 64 169.1 64 256c0 106 86 192 192 192s192-86 192-192c0-86.9-57.8-160.4-137.1-184.1c-16.9-5-26.6-22.9-21.5-39.8s22.9-26.6 39.8-21.5C434.9 42.1 512 140 512 256c0 141.4-114.6 256-256 256S0 397.4 0 256C0 140 77.1 42.1 182.9 10.6c16.9-5 34.8 4.6 39.8 21.5z"
    fill="currentColor"
  />
</svg>
`;

exports[`<DomainStatusIcon /> > renders expected icon and tooltip when status is not validating 2`] = `
<span>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-xmark fa-fw text-danger"
    data-icon="xmark"
    data-prefix="fas"
    focusable="false"
    role="img"
    viewBox="0 0 320 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z"
      fill="currentColor"
    />
  </svg>
</span>
`;

exports[`<DomainStatusIcon /> > renders expected icon and tooltip when status is not validating 3`] = `
<span>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-check fa-fw text-muted"
    data-icon="check"
    data-prefix="fas"
    focusable="false"
    role="img"
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M470.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L192 338.7 425.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
      fill="currentColor"
    />
  </svg>
</span>
`;

exports[`<DomainStatusIcon /> > renders proper tooltip based on state 1`] = `
<div
  class="tooltip-inner"
  role="tooltip"
>
  <span>
    Oops! There is some missing configuration, and short URLs shared with this domain will not work.
    <br />
    Check the 
    <a
      href="https://slnk.to/multi-domain-docs"
      rel="noopener noreferrer"
      target="_blank"
    >
      documentation
    </a>
     in order to find out what is missing.
  </span>
</div>
`;

exports[`<DomainStatusIcon /> > renders proper tooltip based on state 2`] = `
<div
  class="tooltip-inner"
  role="tooltip"
>
  Congratulations! This domain is properly configured.
</div>
`;
